--- a/join.html
+++ b/join.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>안녕하세요</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus non
+      quidem impedit omnis, explicabo facilis cupiditate voluptatem quisquam
+      facere perspiciatis consequatur ducimus vitae corporis aut repell at, ex
+      tempora veniam numquam?
+    </p>
   </body>
 </html>
